modified:   content.latex modified:   content.liquid modified:   dictionary.latex modified:   dictionary.pdf modified:   parse.py modified:   words.yaml

--- a/dictionary/content.latex
+++ b/dictionary/content.latex
@@ -896,7 +896,7 @@
 	
 
 	
-		\key{Athénai.} {\footnotesize (From Lat. \ipa{Athēnae}, from AG \gr{Ἀθῆναι}).} f. Athens.
+		\key{Athénai.} {\footnotesize (From Lat. \ipa{Athēnae}, from AG \gr{Ἀθῆναι}. $\blacklozenge$~This term is in plural).} f. Athens.
 	
 
 	
@@ -4974,7 +4974,7 @@
 	
 
 	
-		\key{Sancta Bíblia.} {\footnotesize (From Lat. \ipa{Sancta Biblia}).} n. holy books; Holy Bible.
+		\key{Sancta Bíblia.} {\footnotesize (From Lat. \ipa{Sancta Biblia}. $\blacklozenge$~This term is in plural).} n. holy books; Holy Bible.
 	
 
 	
@@ -5019,14 +5019,6 @@
 		\key{Satúrnos.}  m.
 			\textbf{1.} Saturn (the god).
 			\textbf{2.} Saturn (the planet).
-	
-
-	
-		\key{Saverios.} {\footnotesize (From Basque \ipa{etxeberria}).} m. Javier, Xavier, Saverio.
-	
-
-	
-		\key{Saverios Castro.}  m. Javier Castro, creator of the Danetian language.
 	
 
 	
@@ -6335,6 +6327,14 @@
 
 	
 		\key{wolframiom.}  n.{\footnotesize \textit{ chemistry.}} wolfram, wolframium, tungsten.
+	
+
+	
+		\key{Xavier.} {\footnotesize (From Basque \ipa{etxeberria}).} m. Javier, Xavier, Saverio.
+	
+
+	
+		\key{Xavier Castro.}  m. Javier Castro, creator of the Danetian language.
 	
 
 	
