new file:   biblia/Makefile modified:   biblia/biblia.latex modified:   biblia/biblia.pdf

--- a/biblia/biblia.latex
+++ b/biblia/biblia.latex
@@ -101,7 +101,25 @@ Da but tosme.}
 \v{31}{Sep vevidet Divos visom jod dedenat, da vevidet jod pelviste vesu.
 Set-pe veksperos, set-pe ausós. But svektos din.}
 
-%\biblebook{Ubbastia}
+\v{2:1}{Sep trosberomnoi djus, fedóm, i visa jehania.}
+\v{2}{Trosbeferet Divos Enosjo verda septamosjo dines, de atisestat apo visomos
+Enosjo verdomos.}
+\v{3}{Vesuveverdíet Divos septamom dinam, i enom sesvenjíet, joimos ana tosmi
+dini trosbeferet apo visomos Enosjo verdomos.}
+
+
+\subsubsection{Adám i Eva}
+
+\v{4}{Vid bibliom danaties dives i fames, joives dedenato ana dini ana tosmi
+dedenat Divos djum i fedomam,}
+\v{5}{i visom grontam adrosjo, joteros nespe dedenato ana fami, i visom
+grontam, joteros nespe uperbefereto, dégar ne but sesontíonts anfrom ana
+fedomam, i ne manves jo vardjoit fedomam.}
+\v{6}{Nu brevan uperit ud fames, i vedenjet visom pretiops fames.}
+\v{7}{Toives Divos atifedestríet manum apo fedomes. Nenumenjet en enosjo
+pretiops, i bújetor viros en bivontam psycham.}
+
+%\biblebook{Udbastia}
 %\biblebook{Levitiskom}
 %\biblebook{Donvoi}
 %\biblebook{Viterarodia}
@@ -187,7 +205,7 @@ Babylonai do Christosjo.}
 
 \subsubsection{Anapresetis}
 
-\v{6:9}{Tosme dégar dolgjete anapresesei: «Nosjos Pater, jo en divi, svensoito
+\v{6:9}{Tosme dégar dolgjete anapresesei: «Nosjos Pater, jo en divi, svenjíto
 tevjom noman.}
 \v{10}{Opjét tevjos posjolik. Fenuíto tevja velja, i en divi i ana fami.}
 \v{11}{Nosjam naumenesam fonam dó ansmi sodines,}
@@ -208,14 +226,14 @@ pro tve, jo iti garaidetin tevjom pontam}.}
 \subsubsection{Anapresetis}
 
 \v{11:2}{Uket enoimos: «Joives pretois, vep: «Nosjos Pater, jo en divi,
-sveníto tevjom noman. Opjét tevjos posjolik.}
+svenjíto tevjom noman. Opjét tevjos posjolik.}
 \v{3}{Nosjam fonam naumenjam dó ansmi podegom dinam.}
 \v{4}{Apojek ansme nosjans balnians, dégar vi apime solnomons, jos protibaljenti
 enoimos, da ne nos ducjés en somblesnom.}
 
 \biblebook{Joanna}
 
-\subsubsection{Verdom bujeti en Manum}
+\subsubsection{Verdom bújetor en Manum}
 
 \v{1:1}{En prameni but Verdom, da Verdom opi Divosjo, da Divos Verdom.}
 \v{2}{Enod but en prameni opi Divosjo.}
