modified:   biblia/biblia.latex modified:   biblia/biblia.pdf

--- a/biblia/biblia.latex
+++ b/biblia/biblia.latex
@@ -31,24 +31,24 @@
 \v{2}{Fedóm est nevidma i nutipretiopés, da rebos úper
 nebufni, da numan Divosjo bereto úper vedensu.}
 
-\v{3}{Toives uket Divos: \qt{Deníto lukos}, i dedenato lukos.}
+\v{3}{Da vevept Divos: \qt{Deníto lukos}, i dedenato lukos.}
 \v{4}{Da vevidet Divos lukom, jom vesum. De apobidet Divos lukom apo rebesos.}
 \v{5}{Vevopet Divos lukom \textit{dine}, da rebos \textit{nopte}. Set-pe
 veksperos, set-pe ausós. But pramos din.}
 
-\v{6}{Toives uket Divos: \qt{Deníto atirama medi vedenfi, da apobidoit vodó
+\v{6}{Toives vevept Divos: \qt{Deníto atirama medi vedenfi, da apobidoit vodó
 apo vedenmos}.}
 \v{7}{Sep dedenat Divos atiramam, da apobefidet vodó, ja upo atirami, apo toimos,
 ja úper atirami.}
 \v{8}{Vevopet Divos atiramam \textit{dive}. Da vevidet Divos jod vesu. Set-pe
 veksperos, set-pe ausós. But viteros din.}
 
-\v{9}{Toives uket Divos: \qt{Opjugojanto vodó, ja upo atirami, en oinom statim,
+\v{9}{Toives vevept Divos: \qt{Opjugojanto vodó, ja upo atirami, en oinom statim,
 da apolukoito susna}. Da but tosme. Opjejugonto vodó, ja upo atirami, en
 enosóm statins, da apolelukoito susna.}
 \v{10}{Vevopet Divos susnam \textit{fame}, da opjugos vedóm vevopet
 \textit{marie}. Da vevidet Divos jod vesu.}
-\v{11}{Toives uket Divos: \qt{Blojét fedóm grontans sugontans semó pro
+\v{11}{Toives vevept Divos: \qt{Blojét fedóm grontans sugontans semó pro
 enosóm ardim e iveman, da dorú denonta pelmó som samenfi en soi ana fami.} Da
 but tosme.}
 \v{12}{Beblót fedóm grontans sugontans semó pro enosóm ardim e iveman, da dorú
@@ -56,10 +56,10 @@ denonta pelmó som samenfi en soi ana fami pro enosóm ardim. Da vevidet Divos
 jod vesu.}
 \v{13}{Set-pe veksperos, set-pe ausós. But tritos din.}
 
-\v{14}{Da uket Divos: «Deníto lukons en atiramam dives pro luketin fedomam,
+\v{14}{Toives vevept Divos: «Deníto lukons en atiramam dives pro lveveptin fedomam,
 bidontans dinam apo noptes, da sint pro sagjemenmos, pro erstidimos, pro
 dinimos, i pro jeromos,}
-\v{15}{da sint luketres en atirami dives gar lukojanto ana fedomam». Da but
+\v{15}{da sint lveveptres en atirami dives gar lukojanto ana fedomam». Da but
 tosme.}
 \v{16}{Dedenat Divos dvons medanons lukons: pelvjesam pro potíetin dinam, i
 melvjesam pro potíetin noptam. Dedenat ipelve astrans.}
@@ -68,7 +68,7 @@ melvjesam pro potíetin noptam. Dedenat ipelve astrans.}
 Divos jod vesu.}
 \v{19}{Set-pe veksperos, set-pe ausós. But petvártos din.}
 
-\v{20}{Toives uket Divos: \qt{Deníto vodó reptilins bivontes psychas, i
+\v{20}{Toives vevept Divos: \qt{Deníto vodó reptilins bivontes psychas, i
 petenjesans avins ana fami upo atirami dives}. Da but tosme.}
 \v{21}{Dedenat Divos medanons cetons i visam bivontam psycham pro enosjas
 ardim, da visam petenjesam avim pro enosjas ardim. Da vevidet Divos jod vesu.}
@@ -76,12 +76,12 @@ ardim, da visam petenjesam avim pro enosjas ardim. Da vevidet Divos jod vesu.}
 Pleníete vodó en marisu. Anapelvíanto avies ana fami}.}
 \v{23}{Set-pe veksperos, set-pe ausós. But pemptos din.}
 
-\v{24}{Da uket Divos: \qt{Deníto fedóm bivontans psychans pro enasóm ardim:
+\v{24}{Toives vevept Divos: \qt{Deníto fedóm bivontans psychans pro enasóm ardim:
 petvarpodans, reptilins, i furopans fames pro enosóm ardim}. Da but tosme.}
 \v{25}{Dedenat Divos furopans fames pro enosóm ardim, da pesu pro enosjo ardim,
 da visom reptilim fames pro enosjo ardim. Da vevidet Divos jod vesu.}
 
-\v{26}{Toives uket Divos: \qt{Deníme manum pro nosjam iconam e iveman, da
+\v{26}{Toives vevept Divos: \qt{Deníme manum pro nosjam iconam e iveman, da
 potíanto úper pistisu maries, i úper avisu dives, i úper pesvi, i úper visi
 jehaní, i úper visosu reptilisu dragomnosu ana fedomam}.}
 \v{27}{Sep dedenat Divos manum. Pro iconam e iveman Divosjo enons dedenat.
@@ -91,7 +91,7 @@ enam uperpotíete. Potíete úper pistisu maries, i úper avisu dives, i úper
 visi pesvi, i úper visi jehaní, i úper visosu reptilisu dragomnosu ana
 fedomam}.}
 
-\v{29}{Toives uket Divos: «Vid, usmi dedóm visam grontam sugontam seman
+\v{29}{Toives vevept Divos: «Vid, usmi dedóm visam grontam sugontam seman
 úper visi jehaní, da visom doru dont pelmó som semenfi en soi. Jenti estin
 baita usmi,}
 \v{30}{i visomos furopimos fames, i visamos avimos dives, i visomos
