modified:   dictionary/content.latex modified:   dictionary/dictionary.pdf modified:   dictionary/words.yaml

--- a/dictionary/content.latex
+++ b/dictionary/content.latex
@@ -505,7 +505,7 @@
 	
 
 	
-		\key{anapelvíeti.} {\footnotesize (From Dan. \ipa{opi- + pelv- + -íeti}).} v. to multiply.
+		\key{anapelvíeti.} {\footnotesize (From Dan. \ipa{ana- + pelv- + -íeti}).} v. to multiply.
 	
 
 	
@@ -517,7 +517,7 @@
 	
 
 	
-		\key{anasedeti.} {\footnotesize (From Dan. \ipa{anasedos}).} v. to triumph, to be victorious over, to win.
+		\key{anasedeti.} {\footnotesize (From Dan. \ipa{anasedos}. $\blacklozenge$~This verb is usually paired with \ipa{+ úper X}, to denote the meaning of being victorious over something or someone.).} v. to triumph, to be victorious over, to win.
 	
 
 	
@@ -3301,6 +3301,10 @@
 	
 
 	
+		\key{linepti.}  v. to leave.
+	
+
+	
 		\key{linguistica.} {\footnotesize (From Fr. \ipa{linguistique}, with a latinized ending).} f. linguistics.
 	
 
@@ -4121,7 +4125,7 @@
 	
 
 	
-		\key{opiti.} {\footnotesize (From Dan. \ipa{opi} and \ipa{iti}).} v. to come.
+		\key{opíti.} {\footnotesize (From Dan. \ipa{opi} and \ipa{iti}).} v. to come.
 	
 
 	\key{ops,}
@@ -4453,7 +4457,7 @@
 	
 
 	
-		\key{pipoti.} {\footnotesize (From PIE \ipa{*píph₃eti}).} v. to drink.
+		\key{piboti.} {\footnotesize (From PIE \ipa{*píph₃eti}, with dissimilation of the second \ipa{p}).} v. to drink.
 	
 
 	
@@ -4675,7 +4679,7 @@
 	
 
 	
-		\key{praisidents.} {\footnotesize (From Lat. \ipa{praesidēns}).} m. president.
+		\key{praisident.} {\footnotesize (From Lat. \ipa{praesidēns}).} m. president.
 	
 
 	
@@ -4721,7 +4725,7 @@
 	
 
 	
-		\key{proiti.} {\footnotesize (From Dan. \ipa{pro- + iti}).} v.
+		\key{proíti.} {\footnotesize (From Dan. \ipa{pro- + iti}).} v.
 			\textbf{1.} to occur, to happen.
 			\textbf{2.} (of days, weeks, years, etc.) to pass.
 	
@@ -5970,11 +5974,11 @@
 	
 
 	
-		\key{udros.} {\footnotesize (From PIE \ipa{*udrós}).} adj. of water, aquatic.
+		\key{udlimanos.} {\footnotesize (From Dan. \ipa{linepti}).} adj. omitted; left out.
 	
 
 	
-		\key{ullimmanos.} {\footnotesize (From Dan. \ipa{linepti}).} adj. omitted; forgotten.
+		\key{udros.} {\footnotesize (From PIE \ipa{*udrós}).} adj. of water, aquatic.
 	
 
 	
@@ -6008,7 +6012,7 @@
 	
 
 	
-		\key{upoiti.} {\footnotesize (From Dan. \ipa{upo- + iti}).} v. to go down, to come down, to descend, to get off.
+		\key{upoíti.} {\footnotesize (From Dan. \ipa{upo- + iti}).} v. to go down, to come down, to descend, to get off.
 	
 
 	
@@ -6205,7 +6209,7 @@
 	
 
 	
-		\key{vesuverdíeti.}  v. to bless.
+		\key{vesverdíeti.}  v. to bless.
 	
 
 	
