modified:   biblia/biblia.latex modified:   biblia/biblia.pdf modified:   biblia/books-of-the-bible.md

--- a/biblia/biblia.latex
+++ b/biblia/biblia.latex
@@ -72,7 +72,7 @@ Divos jod vesu.}
 petenjesans avins ana fami upo atirami dives}. Da but tosme.}
 \v{21}{Dedenat Divos medanons cetons i visam bivontam psycham pro enosjas
 ardim, da visam petenjesam avim pro enosjas ardim. Da vevidet Divos jod vesu.}
-\v{22}{Enons vesuveverdíet Divos: \qt{Alojanto i anapelvíanto.
+\v{22}{Enons vesveverdíet Divos: \qt{Alojanto i anapelvíanto.
 Pleníete vodó en marisu. Anapelvíanto avies ana fami}.}
 \v{23}{Set-pe veksperos, set-pe ausós. But pemptos din.}
 
@@ -130,8 +130,8 @@ pretiops, i bújetor viros en bivontam psycham.}
 %\biblebook{II Redóm}
 %\biblebook{III Redóm}
 %\biblebook{IV Redóm}
-%\biblebook{I Udmantimnóm}
-%\biblebook{II Udmantimnóm}
+%\biblebook{I Udlimanóm}
+%\biblebook{II Udlimanóm}
 %\biblebook{I Esdras}
 %\biblebook{II Esdras}
 %\biblebook{Tobia}
